--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,10 +10,12 @@
   "dependencies": {
     "axios": "^0.19.2",
     "bootstrap": "^4.5.0",
-    "bs-stepper": "^1.7.0",
     "core-js": "^3.6.5",
+    "node-sass": "^4.14.1",
+    "sass-loader": "^8.0.2",
     "vue": "^2.6.11",
-    "vue-router": "^3.2.0"
+    "vue-router": "^3.2.0",
+    "vue-stepper": "^1.4.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.4.0",
