--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "axios": "^0.19.2",
     "bootstrap": "^4.5.0",
     "bootstrap-css-only": "^4.4.1",
+    "bootstrap-vue": "^2.15.0",
     "core-js": "^3.6.5",
     "mdbvue": "6.7.1",
     "node-sass": "^4.14.1",
