--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,6 +1,18 @@
+astroid==2.4.2
 click==7.1.2
+ecdsa==0.15
+esptool==2.8
 Flask==1.1.2
+isort==4.3.21
 itsdangerous==1.1.0
 Jinja2==2.11.2
+lazy-object-proxy==1.4.3
 MarkupSafe==1.1.1
+mccabe==0.6.1
+pyaes==1.6.1
+pylint==2.5.3
+pyserial==3.4
+six==1.15.0
+toml==0.10.1
 Werkzeug==1.0.1
+wrapt==1.12.1
