--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,11 +8,9 @@
   "python.testing.unittestArgs": [
     "-v",
     "-s",
-    "./tests",
+    "./backend",
     "-p",
-    "*_test.py",
-    "-t",
-    "./backend/"
+    "*_test.py"
   ],
   "python.testing.pytestEnabled": false,
   "python.testing.nosetestsEnabled": false,
